@@ -1,6 +1,10 @@
 # ChangeLog for net-mail/pflogsumm
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/pflogsumm/ChangeLog,v 1.16 2010/08/27 23:38:14 radhermit Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-mail/pflogsumm/ChangeLog,v 1.17 2011/06/06 11:42:58 eras Exp $
+
+  06 Jun 2011; Eray Aslan <eras@gentoo.org> -pflogsumm-1.0.11.ebuild,
+  -pflogsumm-1.1.0.ebuild, -pflogsumm-1.1.0-r2.ebuild:
+  Remove old
 
 *pflogsumm-1.1.3 (27 Aug 2010)
 
